changed the title of the index page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!--  Including the Favorite Icon-->
 	<link rel="shortcut icon" type="text/css" href="favicon.ico">
 	<!-- Title -->
-	<title>Google Replica</title>
+	<title>Google Replica Website</title>
 	<!-- Font Awesome -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 	<!-- Author Custom CSS -->
