--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="eng">
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--  Including the Favorite Icon-->
 	<link rel="shortcut icon" type="text/css" href="favicon.ico">
 	<!-- Title -->
